[gd_scene load_steps=6 format=2]

[ext_resource path="res://menu/Pause_menu.gd" type="Script" id=1]
[ext_resource path="res://menu/MainMenu.shader" type="Shader" id=2]
[ext_resource path="res://theme/fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/blurSize = 20

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[node name="Pause_menu" type="Control"]
pause_mode = 2
visible = false
margin_right = 1290.0
margin_bottom = 737.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="darken_bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurFX" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.86389
margin_top = -5.72791
margin_right = -2.86389
margin_bottom = -5.72791
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -145.0
margin_right = 127.0
margin_bottom = 145.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_resume" type="Button" parent="VBoxContainer"]
margin_right = 254.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_retry" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 254.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "Retry"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btn_quit" type="Button" parent="VBoxContainer"]
margin_top = 196.0
margin_right = 254.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Btn_resume" to="." method="_on_Btn_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Btn_retry" to="." method="_on_Btn_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/Btn_quit" to="." method="_on_Btn_quit_pressed"]
